Generate auto/configure/genom.mk which contains information relative to the genom command line. Add preliminary support for propice.

--- a/canvas/Makefile.in
+++ b/canvas/Makefile.in
@@ -55,6 +55,7 @@ flist=\
 
 # makefiles
 flist+= \
+	configure/genom.mk		\
 	configure/config.mk.in		\
 	configure/Makefile.bootstrap.in	\
 	configure/Makefile.top.in	\
