--- a/configure.in
+++ b/configure.in
@@ -45,20 +45,20 @@ dnl --- Checks for functions --------------------------------------------
 dnl
 LIBS=
 
-AC_CHECK_LIB(pthread, pthread_create, [],
-          [AC_MSG_ERROR([pthread_create() not found])], [])
-AC_SEARCH_LIBS(socket, [socket], [LIBS="${LIBS} -lnsl"],
+AC_CHECK_PTHREADS
+
+AC_SEARCH_LIBS(socket, [socket], [],
 	  [AC_MSG_ERROR([socket() not found])], [-lnsl])
+AC_SEARCH_LIBS(socket, [nsl], [],
+	  [AC_MSG_ERROR([socket() not found])], [])
 AC_SEARCH_LIBS(clnt_create, [nsl], [],
 	  [AC_MSG_ERROR([clnt_create() not found])], [])
 AC_SEARCH_LIBS(gethostbyname, [nsl], [],
 	  [AC_MSG_ERROR([gethostbyname() not found])], [])
-AC_SEARCH_LIBS(sem_init, [rt], [],
-	  [AC_MSG_ERROR([sem_init() not found])], [])
 AC_SEARCH_LIBS(dlopen, [dl], [],
 	  [AC_MSG_ERROR([dlopen() not found])], [])
 
-AC_SUBST(OS_LIBS, "${LIBS}")
+AC_SUBST(OS_LIBS, "${LIBS} -lrt")
 
 
 dnl --- Checks for libraries --------------------------------------------
@@ -77,7 +77,7 @@ ROBOT_LIB_TCL
 
 dnl Create the Makefiles ------------------------------------------------
 dnl
-CFLAGS="${C_DEBUG_FLAGS} ${C_WARNING_FLAGS}"
+CFLAGS="${C_DEBUG_FLAGS} ${C_WARNING_FLAGS} ${CFLAGS}"
 
 AC_OUTPUT(
 	config.mk
@@ -90,4 +90,5 @@ AC_OUTPUT(
 	tclserv/client/Makefile
 	doc/user_guide/Makefile
 	emacs/Makefile
+	scripts/Makefile
 )
