3. Add the codel_files attribute to module declarations in order to add   more files than the default ones in the codels directory. Also make the   perl script more robust with sed quoting within regexps.

--- a/canvas/autoconf/Makefile.auto.in
+++ b/canvas/autoconf/Makefile.auto.in
@@ -51,7 +51,7 @@ VPATH=		$(srcdir)
 # --- flags -------------------------------------------------------------
 
 CPPFLAGS+= $genomDefines$ -D$(ENDIANNESS)
-CPPFLAGS+= -I. -I$(topbuild) -I$(srcdir) $serversDir$
+CPPFLAGS+= -I. -I$(topsrcdir) -I$(srcdir) $serversDir$
 CPPFLAGS+= $(COM_INC) $(GENOM_INC)
 
 # GenoM flags
