4. Renamed portLib options into pocolibs.  Look for pocolibs in      $exec_prefix/lib and $prefix/lib instead of using $libdir which      causes weird problems...

--- a/Makefile.in
+++ b/Makefile.in
@@ -32,7 +32,7 @@ include config.mk
 topsrcdir=	@top_srcdir@
 srcdir=		@srcdir@
 
-dist_path= genom
+dist_path= genom-$(GENOM_MAJOR).$(GENOM_MINOR)
 dist_name= genom-$(GENOM_MAJOR).$(GENOM_MINOR)
 
 config_files = \
