--- a/canvas/configure.in
+++ b/canvas/configure.in
@@ -80,15 +80,15 @@ Please use --with-genom-libraries option.])],
 fi
 
 dnl portLib
-ROBOT_PATH_INC([portLib], PORTLIB_INCDIR, [portLib.h],
-	        [AC_MSG_ERROR([portLib headers not found.
-Please use --with-portLib-includes option.])],
+ROBOT_PATH_INC([pocolibs], PORTLIB_INCDIR, [portLib.h],
+	        [AC_MSG_ERROR([pocolibs headers not found.
+Please use --with-pocolibs-includes option.])],
    		[$includedir:/usr/include:/usr/local/include])
 
-ROBOT_PATH_LIB([portLib], PORTLIB_LIBDIR, [libportLib.so],
-	       [AC_MSG_ERROR([portLib libraries not found.
-Please use --with-portLib-libraries option.])],
-	       [$libdir:/usr/lib:/usr/local/lib])
+ROBOT_PATH_LIB([pocolibs], PORTLIB_LIBDIR, [libportLib.so],
+	       [AC_MSG_ERROR([pocolibs libraries not found.
+Please use --with-pocolibs-libraries option.])],
+	       [$exec_prefix/lib:$prefix/lib:/usr/lib:/usr/local/lib])
 
 
 dnl tcl
