5. Removed old makefiles from LAAS distribution. Configuring modules      from within the source directory now works.
Also deal with gcc <stdin>, <built-in> and other weirdnesses in parser.l

--- a/canvas/configure.in
+++ b/canvas/configure.in
@@ -5,7 +5,7 @@ dnl	process this file with autoconf to produce a configure script.
 dnl
 AC_REVISION($LAAS$)
 
-AC_INIT(auto/Makefile)
+AC_INIT(auto/$module$Header.h)
 AC_CONFIG_AUX_DIR(auto/configure)
 dnl AC_CONFIG_HEADER(../config.h)
 
