--- a/config.mk.in
+++ b/config.mk.in
@@ -31,7 +31,7 @@
 # --- Version -----------------------------------------------------------
 
 GENOM_MAJOR=	1
-GENOM_MINOR=	0A
+GENOM_MINOR=	0B
 
 
 # --- Programs ----------------------------------------------------------
