--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,9 @@
 #	$LAAS$
 
 #
-# Copyright (c) 2003 LAAS/CNRS                        --  Mon Aug 18 2003
+# Copyright (c) 2004 
+#      Autonomous Systems Lab, Swiss Federal Institute of Technology.
+# Copyright (c) 2003 LAAS/CNRS
 # All rights reserved.
 #
 # Redistribution  and  use in source   and binary forms,  with or without
@@ -27,10 +29,11 @@
 # OTHERWISE) ARISING IN ANY WAY OUT OF THE  USE OF THIS SOFTWARE, EVEN IF
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
-include config.mk
 
 topsrcdir=	@top_srcdir@
 srcdir=		@srcdir@
+
+include config.mk
 
 dist_path= genom-$(GENOM_MAJOR).$(GENOM_MINOR)
 dist_name= genom-$(GENOM_MAJOR).$(GENOM_MINOR)
@@ -49,7 +52,7 @@ config_files = \
 	scripts/Makefile
 
 config_headers = \
-	config.h
+	genom-config.h
 
 # --- Directory recursion -----------------------------------------------
 
@@ -67,7 +70,7 @@ make_subdirs= @for d in ${SUBDIRS}; do (cd $$d; ${MAKE} $@ ) || exit 2; done
 all install depends: $(config_files) $(config_headers)
 	$(make_subdirs)
 
-clean:
+clean distclean:
 	$(make_subdirs)
 
 
