--- a/canvas/configure.in
+++ b/canvas/configure.in
@@ -26,30 +26,85 @@ AC_C_BIGENDIAN([ENDIANNESS=IS_BIG_ENDIAN], [ENDIANNESS=IS_LITTLE_ENDIAN])
 AC_SUBST(ENDIANNESS)
 
 
+dnl --- RTAI support ----------------------------------------------------
+dnl
+# AC_CHECK_RTAI_INCLUDES(var, path)
+AC_DEFUN([AC_CHECK_RTAI_INCLUDES],
+[
+   AC_MSG_CHECKING([for RTAI includes])
+   AC_CACHE_VAL(ac_cv_path_rtai,
+    [
+       IFS="${IFS= 	}"; ac_save_ifs="$IFS"; IFS=":"
+        ac_tmppath="$2:/usr/realtime/include:/usr/src/rtai/include"
+        for ac_dir in $ac_tmppath; do 
+            test -z "$ac_dir" && ac_dir=.
+            if eval test -f $ac_dir/rtai.h; then
+               eval ac_cv_path_rtai="$ac_dir"
+               break
+            fi
+       done
+       IFS="$ac_save_ifs"
+    ])
+   $1="$ac_cv_path_rtai"
+   if test -n "[$]$1"; then
+      AC_MSG_RESULT([$]$1)
+   else
+      AC_MSG_ERROR([cannot find RTAI includes], 2)
+   fi
+   AC_SUBST($1)
+])
+
+# configure options
+AC_ARG_WITH(rtai,
+           AC_HELP_STRING([--with-rtai=yes|no],
+               [configure to use RTAI]),
+           [opt_rtai=$withval],[opt_rtai=no])
+AC_ARG_WITH(rtai-includes,
+           AC_HELP_STRING([--with-rtai-includes=DIR],
+               [RTAI headers are in DIR]),
+           [opt_rtai_includes=$withval])
+
+# make related stuff
+if test "x$opt_rtai" = "xyes"; then
+   OSAPI=rtai
+   AC_MSG_RESULT([Configuring to use RTAI])
+   AC_CHECK_RTAI_INCLUDES(RTAI_INC, $opt_rtai_includes)
+
+elif test "x$opt_rtai" = "xno"; then :
+   OSAPI=posix
+   AC_MSG_RESULT([Configuring to use POSIX])
+else
+   AC_MSG_ERROR([invalid option --with-rtai=$opt_rtai], 2)
+fi
+AC_SUBST(OSAPI)
+
+
 dnl --- checks for functions --------------------------------------------
 dnl
 
 LIBS=
 
-AC_CHECK_PTHREADS
+dnl AC_CHECK_PTHREADS
 
-AC_SEARCH_LIBS(socket, [socket], [],
-	  [AC_MSG_ERROR([socket() not found])], [-lnsl])
-AC_SEARCH_LIBS(socket, [nsl], [],
-	  [AC_MSG_ERROR([socket() not found])], [])
-AC_SEARCH_LIBS(clnt_create, [nsl], [],
-	  [AC_MSG_ERROR([clnt_create() not found])], [])
-AC_SEARCH_LIBS(gethostbyname, [nsl], [],
-	  [AC_MSG_ERROR([gethostbyname() not found])], [])
-AC_SEARCH_LIBS(sem_init, [rt], [],
-	  [AC_MSG_ERROR([sem_init() not found])], [])
-AC_SEARCH_LIBS(dlopen, [dl], [],
-	  [AC_MSG_ERROR([dlopen() not found])], [])
+dnl AC_SEARCH_LIBS(socket, [socket], [],
+dnl 	  [AC_MSG_ERROR([socket() not found])], [-lnsl])
+dnl AC_SEARCH_LIBS(socket, [nsl], [],
+dnl 	  [AC_MSG_ERROR([socket() not found])], [])
+dnl AC_SEARCH_LIBS(clnt_create, [nsl], [],
+dnl 	  [AC_MSG_ERROR([clnt_create() not found])], [])
+dnl AC_SEARCH_LIBS(gethostbyname, [nsl], [],
+dnl         [AC_MSG_ERROR([gethostbyname() not found])], [])
+dnl AC_SEARCH_LIBS(sem_init, [rt], [],
+dnl         [AC_MSG_ERROR([sem_init() not found])], [])
+dnl AC_SEARCH_LIBS(dlopen, [dl], [],
+dnl         [AC_MSG_ERROR([dlopen() not found])], [])
+dnl AC_SEARCH_LIBS([timer_create], [rt], [],
+dnl         [AC_MSG_ERROR([timer_create() not found])], [])
 
-AC_SEARCH_LIBS([fabs], [m])
-AC_SEARCH_LIBS([atan], [m])
+dnl AC_SEARCH_LIBS([fabs], [m])
+dnl AC_SEARCH_LIBS([atan], [m])
 
-AC_SUBST(OS_LIBS, "${LIBS} -lrt")
+AC_SUBST(OS_LIBS, "${LIBS}")
 
 
 dnl --- checks for libraries --------------------------------------------
@@ -83,12 +138,12 @@ dnl portLib
 ROBOT_PATH_INC([pocolibs], PORTLIB_INCDIR, [portLib.h],
 	        [AC_MSG_ERROR([pocolibs headers not found.
 Please use --with-pocolibs-includes option.])],
-   		[$includedir:/usr/include:/usr/local/include])
+   		[`$genomBin$ --includes`:$includedir:/usr/include:/usr/local/include])
 
 ROBOT_PATH_LIB([pocolibs], PORTLIB_LIBDIR, [libportLib.so],
 	       [AC_MSG_ERROR([pocolibs libraries not found.
 Please use --with-pocolibs-libraries option.])],
-	       [$exec_prefix/lib:$prefix/lib:/usr/lib:/usr/local/lib])
+	       [`$genomBin$ --libraries`:$exec_prefix/lib:$prefix/lib:/usr/lib:/usr/local/lib])
 
 
 dnl tcl
