--- a/configure.in
+++ b/configure.in
@@ -6,25 +6,17 @@ dnl
 AC_REVISION($LAAS$)
 
 AC_INIT(src/genom.c)
-AC_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADER(genom-config.h)
 
-dnl Programs names ------------------------------------------------------
+dnl --- Programs names --------------------------------------------------
+dnl
 GENOM=genom
 TCLSERV=tclserv
 AC_SUBST(GENOM)
 AC_SUBST(TCLSERV)
 
 
-dnl Checks for headers --------------------------------------------------
-dnl
-AC_CHECK_HEADERS(sys/cdefs.h)
-
-AC_C_BIGENDIAN([ENDIANNESS=IS_BIG_ENDIAN], [ENDIANNESS=IS_LITTLE_ENDIAN],
-          [ENDIANNESS=IS_UNKNOWN_ENDIAN])
-AC_SUBST(ENDIANNESS)
-
-
-dnl Checks for programs -------------------------------------------------
+dnl --- Checks for programs ---------------------------------------------
 dnl
 AC_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
@@ -41,6 +33,60 @@ ROBOT_CFLAGS
 ROBOT_CPP_USES_STDIN
 ROBOT_PROG_MKDEP
 
+
+dnl --- RTAI support ----------------------------------------------------
+dnl
+# AC_CHECK_RTAI_INCLUDES(var, path)
+AC_DEFUN([AC_CHECK_RTAI_INCLUDES],
+[
+   AC_MSG_CHECKING([for RTAI includes])
+   AC_CACHE_VAL(ac_cv_path_rtai,
+    [
+       IFS="${IFS= 	}"; ac_save_ifs="$IFS"; IFS=":"
+        ac_tmppath="$2:/usr/realtime/include:/usr/src/rtai/include"
+        for ac_dir in $ac_tmppath; do 
+            test -z "$ac_dir" && ac_dir=.
+            if eval test -f $ac_dir/rtai.h; then
+               eval ac_cv_path_rtai="$ac_dir"
+               break
+            fi
+       done
+       IFS="$ac_save_ifs"
+    ])
+   $1="$ac_cv_path_rtai"
+   if test -n "[$]$1"; then
+      AC_MSG_RESULT([$]$1)
+   else
+      AC_MSG_ERROR([cannot find RTAI includes], 2)
+   fi
+   AC_SUBST($1)
+])
+
+# configure options
+AC_ARG_WITH(rtai,
+           AC_HELP_STRING([--with-rtai=yes|no],
+               [configure to use RTAI]),
+           [opt_rtai=$withval],[opt_rtai=no])
+AC_ARG_WITH(rtai-includes,
+           AC_HELP_STRING([--with-rtai-includes=DIR],
+               [RTAI headers are in DIR]),
+           [opt_rtai_includes=$withval])
+
+# make related stuff
+if test "x$opt_rtai" = "xyes"; then
+   OSAPI=rtai
+   AC_MSG_RESULT([Enabling RTAI kernel support])
+   AC_CHECK_RTAI_INCLUDES(RTAI_INC, $opt_rtai_includes)
+
+elif test "x$opt_rtai" = "xno"; then :
+   OSAPI=posix
+   AC_MSG_RESULT([Configuring to use POSIX])
+else
+   AC_MSG_ERROR([invalid option --with-rtai=$opt_rtai], 2)
+fi
+AC_SUBST(OSAPI)
+
+
 dnl --- Checks for functions --------------------------------------------
 dnl
 LIBS=
@@ -48,17 +94,28 @@ LIBS=
 AC_CHECK_PTHREADS
 
 AC_SEARCH_LIBS(socket, [socket], [],
-	  [AC_MSG_ERROR([socket() not found])], [-lnsl])
-AC_SEARCH_LIBS(socket, [nsl], [],
-	  [AC_MSG_ERROR([socket() not found])], [])
+        [AC_MSG_ERROR([socket() not found])], [-lnsl])
+AC_SEARCH_LIBS(bind, [nsl], [],
+        [AC_MSG_ERROR([socket() not found])], [])
 AC_SEARCH_LIBS(clnt_create, [nsl], [],
-	  [AC_MSG_ERROR([clnt_create() not found])], [])
+        [AC_MSG_ERROR([clnt_create() not found])], [])
 AC_SEARCH_LIBS(gethostbyname, [nsl], [],
-	  [AC_MSG_ERROR([gethostbyname() not found])], [])
+        [AC_MSG_ERROR([gethostbyname() not found])], [])
 AC_SEARCH_LIBS(dlopen, [dl], [],
-	  [AC_MSG_ERROR([dlopen() not found])], [])
+        [AC_MSG_ERROR([dlopen() not found])], [])
+AC_SEARCH_LIBS([timer_create], [rt], [],
+        [AC_MSG_ERROR([timer_create() not found])], [])
 
-AC_SUBST(OS_LIBS, "${LIBS} -lrt")
+AC_SUBST(OS_LIBS, "${LIBS}")
+
+
+dnl ---- Checks for headers ---------------------------------------------
+dnl
+AC_CHECK_HEADERS(sys/cdefs.h)
+
+AC_C_BIGENDIAN([ENDIANNESS=IS_BIG_ENDIAN], [ENDIANNESS=IS_LITTLE_ENDIAN],
+          [ENDIANNESS=IS_UNKNOWN_ENDIAN])
+AC_SUBST(ENDIANNESS)
 
 
 dnl --- Checks for libraries --------------------------------------------
@@ -67,6 +124,7 @@ ROBOT_PATH_INC([pocolibs], PORTLIB_INC, [portLib.h],
 	       [AC_MSG_ERROR([pocolibs headers not found.
 Please use --with-pocolibs-includes option.])],
 	       [$includedir:/usr/include:/usr/local/include])
+
 ROBOT_PATH_LIB([pocolibs], PORTLIB_LIB, [libportLib.so],
 	       [AC_MSG_ERROR([pocolibs libraries not found.
 Please use --with-pocolibs-libraries option.])],
@@ -75,7 +133,7 @@ Please use --with-pocolibs-libraries option.])],
 ROBOT_LIB_TCL
 
 
-dnl Create the Makefiles ------------------------------------------------
+dnl --- Create the Makefiles --------------------------------------------
 dnl
 CFLAGS="${C_DEBUG_FLAGS} ${C_WARNING_FLAGS} ${CFLAGS}"
 
